# duck_ui5

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE.md  Makefile  README.md  TLDR.md  deno.json  index.html  main.py  package.json  process_dump.py  pyproject.toml  sample.parquet  styles.css  transform_trial_balances.py
.husky/: commit-msg  pre-commit
docs/: CODE_IMPROVEMENTS.md  DATA_TYPE_STRATEGY.md
export/: trial_balances.duckdb
import/: 2025_BalansenWinstverliesperperiode.xlsx
m_code/: fac_TrialBalances.m
scripts/: __init__.py  combine_databases.py  process_dump.py  transform_trial_balances.py  utils.py  validate_account_codes.py
tests/: __init__.py  test_utils.py
