[project]
name = "duck-ui5"
version = "0.1.1"
description = "Data layer for FP&A - Excel to DuckDB transformation with interactive web viewer"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["duckdb", "data-transformation", "excel", "analytics", "fpa"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "duckdb>=1.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "xlrd>=2.0.0",  # For reading .xls files
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",      # Fast Python linter and formatter
    "pytest>=8.0.0",    # Testing framework
    "mypy>=1.13.0",     # Type checking
    "pre-commit>=4.0.0", # Git hook management
]

[project.scripts]
process-dump = "scripts.process_dump:main"
transform-trial-balances = "scripts.transform_trial_balances:main"
combine-databases = "scripts.combine_databases:main"
validate-account-codes = "scripts.validate_account_codes:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true when ready for strict typing
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.bandit]
exclude_dirs = [".venv", "tests", "node_modules"]
skips = ["B101"]  # Skip assert_used (acceptable in tests)
